Added about. edit styles.css

--- a/Startr - Free Startup Landing page Template/About.html
+++ b/Startr - Free Startup Landing page Template/About.html
@@ -353,13 +353,28 @@
 
                             </div>
 
+                            <div class="aboutcontainer"> 
+                                <h2 style="color: black">HHCOSP</h2>
+                                <strong style="color: black">   
+                                    The purpose of the Holistic Healthcare Community Outreach and Support Project. (HHCOSP) is:<br>
+                                    1. to promote the access of holistic healthcare to communities with limited access to healthcare through creating and building on exisiting models.<br>
+                                    2. to develop partnerships with community based organizations who are providing healthcare in these communities in order to link organizations and individuals who practice the many forms of holistic healthcare.<br>
+                                    3. to provide technical assistance for community based organizations which have an interest in integrating holistic healthcare into their services.<br>
+                                    4. to develop ways to increase the number of people of color and medically underserved people entering the holistic healthcare field.<br><br>
+
+                                    One of the ways that we are furthering this purpose is to create a Bay Area Healthcare Consortium, where community based organizations that are serving medically underserved people can be linked to holistic healthcare providers willing to donate their services. We are organizing a pilot project that will elaborate on our model of working within community based organizations. We will initially take a designated number of clients in a community based organization, and offer a course of from 2 to ten weeks of holistic healthcare services to enhance the goal of the community based organization as well as further Herban Health’s goal of providing holistic healthcare to those with limited resources in a manner that increases their own involvement in their healthcare. The goal of the pilot project is to:<br>
+                                    1. Provide services where they are needed.<br>
+                                    2. Develop systems in order to facilitate the matching of needs with resources.<br>
+                                    3. Document and critique the results of this project in order to expand its use.<b>
+
+
+                                </strong>
+
+                            </div>
+
 
 
                         </header>
-                        <article>
-
-
-                        </article>
                     </div>
                 </section>
 
@@ -377,18 +392,17 @@
 
                     	<article>
 
-                    		<h2>We even give you more than your expectation</h2>
+                    		<h2>DONORS</h2>
 
-                            <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. </p>
+                            <p>Herban Health would like to thank all of donors, small and large. Without them we would be unable to do our work, and therefore we extend to them our heartfelt thanks and gratitude. </p>
 
-                            <p>Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo orta felis euismod semper.Morbi leo orta felis euismod semper.Maecenas sed diam eget risus varius.</p>
+                            <p>Specifically, to have resources to pay for supplies, for teachers for our classes, for translation services, and for the various costs that organizations normally incur such as insurance and electronic communication, we have received grants and individual donations from the following: Philanthropic Ventures, the Lisa and Matthew Sonsini Family Fund, Microsoft, VMWare, and individual donors who have donated from $1.00 to $500. We also receive many in kind donations which helps us keep our expenses low, such as space for our clinics and classes. We are grateful to Free at Last, Ravenswood Family health Center, and the Ecumenical Hunger Program in particular. Patients often bring us alcohol swabs, or cotton or other types of supplies to help our clinics.</p>
 
                         </article>
 
                     </div>
 
                  </section>
-
                 <!-- image-content -->
 
                 <div class="clearfix"></div>
@@ -413,17 +427,61 @@
 
             </section>
 
-            <!-- section-two -->
+               <section class="section-five text-center" id="section-five">
+                    <div class="container">
+                         <header role="title-page" class="text-center">
 
-            
+                            <h4>BOARD OF DIRECTORS</h4>
+
+
+                            <div class="aboutcontainer"> 
+                                <h2 style="color: black">Patricia Foster</h2>
+                                <strong style="color: black">   
+                                     Ms. Foster is a former East Palo Alto City Council member, and currently acts as the Executive Director of the organization Girls to Women. She has over 22 years' experience as a resident and a community empowerment advocate in East Palo Alto. Before founding Girls Two Women late last year, Pat led a profound revitalization of the Girls' Club of the Mid-Peninsula, developed other after-school programs for at-risk youth, counseled juvenile offenders, connected service agencies with volunteers, taught basic English and math skills to low-income adults from immigrant and disadvantaged backgrounds, and facilitated community development and economic empowerment strategies.<br><br>
+
+                                     As a woman of color and an immigrant herself, Ms. Foster's familiarity with the vulnerabilities and strengths characterizing families among marginalized constituencies goes beyond the professional level to the personal.
+                                </strong>
+
+                            </div>
+
+                            <div class="aboutcontainer"> 
+                                <h2 style="color: black">Ruben Abrica</h2>
+                                <strong style="color: black">   
+                                    Mr. Abrica is currently serving as an East Palo Alto City Council member.<br>
+                                    He is also an Instructor at De Anza Community College in the Intercultural/ International Studies Division and serves as adjunct faculty in the Teacher Preparation Department of The National Hispanic University.<br>
+                                    His professional work in education includes working in educational research, supervising tutor-counselors for Upward Bound, teaching ESL and adult education, working as a consultant for the California Department of Education, and serving as a Spanish Language Trainer for Peace Corps<br>
+                                    Mr Abrica received his M.A. in Education from Stanford University and did graduate work in Linguistics at UC San Diego. He has lived in East Palo Alto for 30 years and has been involved in a variety of community endeavors. He currently serves as Mayor of the city of East Palo Alto. During the 1990's he served on the Board of Trustees of the Ravenswood School District. Mr. Abrica was also involved in the incorporation movement and served on the first East Palo Alto City Council in the 1980's. He is a founding member of the Ravenswood AYSO Soccer League for boys and girls, the Comité Latino and the East Palo Alto Council of Tenants.<br><br>
+                                </strong>
+                            </div>
+
+                            <div class="aboutcontainer"> 
+                                <h2 style="color: black">Dyanne Ladine</h2>
+                                <strong style="color: black">   
+                                    Ms. Ladine has worked for over forty years for economic and social justice, by partnering with and being on the Boards of many community based organizations, organizing with others several community based organizations such as Lettuce Work Women's Cooperative, EPACAN DO, and Herban Health, all in East Palo Alto CA. Additionally, she has taught at Notre Dame de Namur University for over twenty years and has degrees in law, business, religion and Oriental medicine.<br><br>
+                                </strong>
+
+                            </div>
+
+                            <div class="aboutcontainer"> 
+                                <h2 style="color: black">Lillian Barden</h2>
+                                <strong style="color: black">   
+                                    Lillian Barden, PhD, currently serves as Professor Emeritus in the School of Business and Management at Notre Dame de Namur University. She has extensive experience in management and finance with both for profit and non-profit organizations. Former Chair of the Intensive Business program at NDNU, Lillian remains active in consulting work with non-profits in San Mateo County. Prior to her work at Notre Dame de Namur University, Lillian taught project management at St. Mary’s College in Moraga for several years<br><br>
+                                </strong>
+
+                            </div>
 
 
 
-                    <!-- contact-form -->
+                        </header>
+                        <article>
 
-                    <div class="clearfix"></div>
 
-                </div> 
+                        </article>
+                    </div>
+                </section>
+
+
+
 
                 <!-- map -->
 
