Updating alot of things

--- a/Startr - Free Startup Landing page Template/ClinicServices.html
+++ b/Startr - Free Startup Landing page Template/ClinicServices.html
@@ -218,7 +218,48 @@
             <div class="clearfix"></div>
                                
 
+            <section>
+                <div class="col-xs-12 col-sm-6 col-md-6">
 
+                    <article>
+
+                        <h2>I. ACUPUNCTURE: NEW POLICY (Thank you for your understanding)</h2>
+
+                        <ul>
+                            <li>1. Please no children in the clinic for safety reasons unless they are being treated.</li>
+
+                            <li>2. No one will be treated if arriving after 11:15, but if too many people are remaining to be treated by 11:00, we will need to turn people away.</li>
+
+                            <li>3. Patients are expected to eat before they come.</li>
+
+                        </ul>
+
+                        <h2>II. NEW PATIENTS</h2>
+                        <ul>
+                          <li>1. Please eat before you come.</li>
+                          <li>2. At the first visit, new patients will receive a brief introduction to acupuncture and will be asked to fill out paperwork. There will be a limit to the number of new patients we will take for the clinic depending on the total number of patients and practitioners present that day.</li> 
+                          <li>3. People will be treated in the order of their arrival. Depending on how many people are already waiting and the opinion of the acupunturist, the first acupuncture treatment may be mainly ear acupuncture, or earballs to address their main health concerns.</li>    
+
+
+                        </ul>
+
+
+
+                        
+
+
+                    </article>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-6">
+
+                    <figure class="row" style="background-image:url('images/BrandingDay4.jpg')"></figure>
+
+                </div>
+
+            </section>
+            <div class="clearfix"></div>
 
             <!-- section-one -->
 
