--- a/Startr - Free Startup Landing page Template/Forum.html
+++ b/Startr - Free Startup Landing page Template/Forum.html
@@ -177,13 +177,17 @@
 
 
             <!-- Tribe Tag -->
+            <div style="align-content: center; padding-left: 15%;padding-right: 15%;">
             <iframe
               src="https://community.tribe.so/embed/home?components=feed&feedLimit=10"
               frameborder="0"
               width="100%"
               style="min-height: 1000px; width: 100%;"
               allowtransparency="true">
-            </iframe>
+            </iframe>       
+
+            </div>
+
                     	
 
  
